@@ -18,12 +18,15 @@ Release 0.8
 - exec and execMany now return the number of rows affected rather the count of 
   SQL statements executed
 - Implemented support for blob data types - fixes issue #104
+- Added bool native_object_base::is_object_native() 
+- bool flusspferd::is_native<T>() no longer throws if an object is not native
 
 2009-09-20
 - Added lastInsertID to SQLite3
 - Added tail to SQLite3.Cursor
 - Removed the tail part from the sql property of SQLite3.Cursor
 - Added exec to SQLite3 (supports multiple statements)
+- json2.js (http://www.json.org/json2.js) is now loaded to provide an ES5 compatible JSON object for older spidermonkey
 
 2009-09-19:
 - Immature plugins have been removed (and moved into feature branch).
